--- a/styles/material_light.less
+++ b/styles/material_light.less
@@ -3,7 +3,7 @@
 @borderColor:				mix(@color, @bgColor, 10%);   // цвет границы болока
 @bg-quote: 					rgba(50,180,255,0.5);   // цвет блока цитаты
 @bg-hidden:					rgba(0,0,0,0.05);   // цвет блока скрытого текста
-@bg-code:					rgba(200,150,0,0.5);   // цвет блока кода
+@bg-code:					rgba(255,210,60,0.5);   // цвет блока кода
 @scroll-color:				rgba(0,0,0,0.2);   // цвет скролла
 @colorPoll:					mix(#79c, @color, 80%);   // цвет акцента опроса
 @footerButtonColor:			rgba(127,127,127,0.7);
